Fri Jan  8 20:11:41 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * DevGuideExamples:

          Reverted DevGuideExamples changes from r2852.

Fri Jan  8 06:03:48 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:

          - Made get_discovered_participants returns exclude itself.
          - Made get_discovered_participants and get_discovered_topics
            returns exclude the ignored participants and topics.

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Added get_discovered_participants/get_discovered_topics
          excluding ignored participants/topics test case.

Thu Jan  7 23:54:03 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/BuiltInTopicTest/monitor.cpp:

          Changed comparison GUID_t value extracted from
          BuiltinTopicKey_t to have the VendorId field set.

Thu Jan  7 17:30:21 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorData.h:
        * tools/odds_monitor/MonitorData.cpp:
        * tools/odds_monitor/MonitorTask.h:
        * tools/odds_monitor/Viewer.cpp:

          Removed a minor encapsulation violation.

Thu Jan  7 05:14:11 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:

          Updated release notes with new documentation path.

Thu Jan  7 05:08:11 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:
        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Corrected logging for errno values.

Thu Jan  7 04:44:26 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * docs/html/multirepo.html:

          Updated to new HTML documentation style.

Wed Jan  6 05:23:50 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * bin/PerlDDS/Cross_Sync.pm:
        * bin/PerlDDS/Cross_Sync_Common.pm:
        * bin/PerlDDS/Process_Java.pm:

          Fixed package names.
